# whatsapp

./: .gitignore  package-lock.json
BE/: Cargo.toml
BE/migrations/: 20250907141955_create_users_table.up.sql  20250922084402_add_column_name_image_url_to_users_table.down.sql  20250922084402_add_column_name_image_url_to_users_table.up.sql  20251003092002_create_channels_table.down.sql  20251003092002_create_channels_table.up.sql  20251003092244_create_channel_users_table.down.sql  20251003092244_create_channel_users_table.up.sql
BE/src/: handler.rs  jwt.rs  main.rs  model.rs  route.rs
FE/: next.config.ts  package-lock.json  package.json
FE/src/: api.ts  middleware.ts  socket.ts
FE/src/app/: chat.tsx  globals.css  navbar.tsx  page.tsx  setting.tsx  status.tsx
FE/src/app/api/auth/[...nextauth]/: route.ts
FE/src/app/login/: page.tsx
FE/src/components/custom/: conversation.tsx
FE/src/components/custom/card/: user-card.tsx
FE/src/components/custom/chat/: conversation-header.tsx  conversation-input.tsx  main.tsx  new-chat.tsx  new.tsx  short-conversation.tsx
FE/src/components/custom/chat/new/: community.tsx  contact.tsx  group.tsx  index.ts
FE/src/components/ui/: button.tsx  floating-input.tsx  input.tsx
FE/src/context/: global-context.tsx  nav-context.tsx
FE/src/lib/: useApi.ts
FE/src/types/: next-auth.d.ts  types.ts
src/app/: globals.css
src/components/ui/: button.tsx
