[package]
name = "BE"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws", "form", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std", "postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
tower-http = { version = "0.6.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
